manifests/apps/sparkyfitness/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sparkyfitness
  namespace: sparkyfitness
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - fitness.cluster.nelsondane.com
    - fitness.nelsondane.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sparkyfitness-frontend
          port: 80
